apps/media/flood-rtorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: flood-rtorrent
    name: flood-rtorrent
    namespace: media
spec:
    replicas: 1
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: flood-rtorrent
    template:
        metadata:
            labels:
                app: flood-rtorrent
        spec:
            containers:
                - image: jesec/flood:4.9.0
                  name: flood
                  securityContext:
                      runAsUser: 911
                      runAsGroup: 911
                      fsGroup: 911
                  args:
                      - "--auth=none"
                      - "--allowedpath=/data"
                      - "--secret=$(SECRET_VALUE)"
                      - "--rtsocket=/sock/rtorrent.sock"
                  ports:
                      - containerPort: 3000
                        name: http
                  volumeMounts:
                      - name: rtorrent-sock
                        mountPath: /sock
                      - name: flood-state
                        mountPath: /config
                      - name: media-volume
                        mountPath: /data
                - image: jesec/rtorrent:0.9.8-r16
                  name: rtorrent
                  securityContext:
                      runAsUser: 911
                      runAsGroup: 911
                      fsGroup: 911
                  ports:
                      - containerPort: 42069
                        name: rtorrent
                  volumeMounts:
                      - name: rtorrent-sock
                        mountPath: /sock
                      - name: rtorrent-state
                        mountPath: /config
                      - name: rtorrent-rc
                        mountPath: /config/.rtorrent.rc
                        subPath: .rtorrent.rc
                      - name: media-volume
                        mountPath: /data
            volumes:
                - name: flood-state
                  persistentVolumeClaim:
                      claimName: flood-state
                - name: rtorrent-sock
                  emptyDir:
                      medium: Memory
                - name: rtorrent-state
                  persistentVolumeClaim:
                      claimName: rtorrent-state
                - name: rtorrent-rc
                  configMap:
                      name: rtorrent-rc
                - name: media-volume
                  persistentVolumeClaim:
                      claimName: media-volume
