apps/media/flood-rtorrent/flood-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: flood
    namespace: media
spec:
    selector:
        app: flood
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
          name: http
    type: ClusterIP
