apps/media/flood-rtorrent/rtorrent-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: rtorrent-gateway
    namespace: media
    annotations:
        external-dns.alpha.kubernetes.io/target: iserlohn.thisratis.gay
spec:
    gatewayClassName: istio
    addresses:
        - type: IPAddress
          value: 10.0.1.1
    listeners:
        - name: bittorrent
          protocol: TCP
          port: 42069
          allowedRoutes:
              kinds:
                  - kind: TCPRoute
              namespaces:
                  from: All
